# rust-os

./: Cargo.toml  container.json  create-ec2.sh  run-gdb.sh  run-qemu.sh
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  lib.rs  log.rs  main.rs  memory.rs  serial.rs
kernel/src/task/: executor.rs  mod.rs  simple_executor.rs
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/task/: keyboard.rs  mod.rs
tests/: basic_boot.rs  should_panic.rs
